3222/deploy/k8s/portal/service-portal.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: anotherclass-322
  name: portal-3222
  labels:
    part-of: k8s-anotherclass
    component: frontend-server
    name: portal
    instance: portal-3222
    version: 3.0.0
    managed-by: kubectl
spec:
  selector:
    part-of: k8s-anotherclass
    component: frontend-server
    name: portal
    instance: portal-3222
  ports:
    - port: 80
      targetPort: http
  type: ClusterIP
