3222/deploy/k8s/portal/ingress-portal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: anotherclass-322
  name: portal-3222
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: portal.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portal-3222
                port:
                  number: 80
  tls:
    - hosts:
        - portal.com
      secretName: portal-3222-tls
